Use new Java `StackWalker` API